dashboard breakdown for one client (by dept)

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
@@ -1,3 +1,14 @@
-﻿
+﻿@model DirectAgents.Web.Areas.RevTrack.Models.DashboardVM
 
-Breakdown... by department
+Breakdown By Department
+
+<table>
+@foreach (var stat in Model.ABStats)
+{
+<tr>
+    <td>@stat.Name</td>
+    <td>@stat.Rev</td>
+    <td>@stat.Cost</td>
+</tr>
+}
+</table>
