--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DirectAgents.Web.Areas.RevTrack.Models.DashboardVM
+﻿@model DirectAgents.Web.Areas.AB.Models.DashboardVM
 
 <h2>Dashboard</h2>
 
