--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/_ViewStart.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/_ViewStart.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
+    Layout = "Shared/_LayoutAB.cshtml";
     ViewContext.Controller.ViewBag.UseTableCSS = true;
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
