--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DirectAgents.Web.Areas.AB.Models.DashboardVM
 
-<h2>Dashboard</h2>
+<h2>AB Dashboard</h2>
 
 @Html.Partial("ChooseMonth", (SelectList)ViewBag.ChooseMonthSelectList)
 
