--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
@@ -6,6 +6,7 @@
 @foreach (var client in Model.OrderBy(c => c.Name))
 {
     <tr>
+        <td>@Html.ActionLink("edit", "Edit", new { id = client.Id })</td>
         <td>@client.Id</td>
         <td>@client.Name</td>
     </tr>
