--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Shared/_LayoutAB.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Shared/_LayoutAB.cshtml
@@ -47,15 +47,15 @@ table th,td {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Test...</a>
-        <!--<a class="navbar-brand" href="@Url.Action("Index", "Dashboard", new { x = 10 })">Dashboard-10</a>-->
+        <a class="navbar-brand" href="@Url.Action("Index", "Dashboard", new { x = 10 })">Test...</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accounting Backup <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="@Url.Action("Index", "Dashboard", new { x = 10 })">Dashboard-10</a></li>
+                    <li><a href="@Url.Action("Index", "Dashboard")">Dashboard</a></li>
+                    <li><a href="@Url.Action("Index", "Clients")">Clients</a></li>
                 </ul>
             </li>
         </ul>
