--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
@@ -19,7 +19,7 @@
             </table>
             <br />
             <input type="submit" value="Save" />
-            &nbsp;@Html.ActionLink("cancel", "Index")
+            &nbsp;@Html.ActionLink("cancel", "Show", new { id = Model.Id })
         </div>
     }
 </fieldset>
