--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Edit.cshtml
@@ -16,6 +16,14 @@
                     <td>@Html.LabelFor(m => m.Name)</td>
                     <td>@Html.EditorFor(m => m.Name)</td>
                 </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.ExtCredit)</td>
+                    <td>@Html.EditorFor(m => m.ExtCredit)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.IntCredit)</td>
+                    <td>@Html.EditorFor(m => m.IntCredit)</td>
+                </tr>
             </table>
             <br />
             <input type="submit" value="Save" />
