PostClickRev, PostViewRev - front end

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/DailySummaries/Edit.cshtml
@@ -35,8 +35,16 @@
                     <td>@Html.EditorFor(m => m.PostClickConv)</td>
                 </tr>
                 <tr>
+                    <td>@Html.LabelFor(m => m.PostClickRev)</td>
+                    <td>@Html.EditorFor(m => m.PostClickRev)</td>
+                </tr>
+                <tr>
                     <td>@Html.LabelFor(m => m.PostViewConv)</td>
                     <td>@Html.EditorFor(m => m.PostViewConv)</td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.PostViewRev)</td>
+                    <td>@Html.EditorFor(m => m.PostViewRev)</td>
                 </tr>
             </table>
             <br />
