--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Index.cshtml
@@ -22,7 +22,7 @@
 @foreach (var stat in Model.ABStats)
 {
 <tr>
-    <td>@Html.ActionLink("+", "Client", new { id = stat.Id }) @stat.Client</td>
+    <td>@Html.ActionLink("+", "LineItems", new { clientId = stat.Id }) @stat.Client</td>
     <td>@stat.Budget</td>
     <td>@stat.Rev</td>
     <td>@stat.Cost</td>
