--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/ExtAccount.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/ExtAccount.cshtml
@@ -32,7 +32,7 @@
     <th>PostClick Rev</th>
     <th>PostView Conv</th>
     <th>PostView Rev</th>
-    <th>Total Conv</th>
+@*    <th>Total Conv</th>*@
     <th>Cost</th>
 </tr>
 @foreach (var stat in Model.Stats)
@@ -55,7 +55,7 @@
     <td style="text-align:right">@stat.PostClickRev</td>
     <td style="text-align:right">@stat.PostViewConv</td>
     <td style="text-align:right">@stat.PostViewRev</td>
-    <td style="text-align:right">@stat.TotalConv</td>
+@*    <td style="text-align:right">@stat.TotalConv</td>*@
     <td style="text-align:right">@stat.Cost</td>
 </tr>
 }
@@ -77,7 +77,7 @@
     <th style="text-align:right">@tot.PostClickRev</th>
     <th style="text-align:right">@tot.PostViewConv</th>
     <th style="text-align:right">@tot.PostViewRev</th>
-    <th style="text-align:right">@tot.TotalConv</th>
+@*    <th style="text-align:right">@tot.TotalConv</th>*@
     <th style="text-align:right">@tot.Cost</th>
 </tr>
 }
