--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/ProgAdmin/Views/Stats/Strategy.cshtml
@@ -28,8 +28,10 @@
     <th>CPC</th>
     <th>CPA</th>
     <th>PostClick Conv</th>
+    <th>PostClick Rev</th>
     <th>PostView Conv</th>
-    <th>Total Conv</th>
+    <th>PostView Rev</th>
+@*    <th>Total Conv</th>*@
     <th>Cost</th>
 </tr>
 @foreach (var stat in Model.Stats)
@@ -45,8 +47,10 @@
     <td style="text-align:center">@stat.CPC</td>
     <td style="text-align:center">@stat.CPA</td>
     <td style="text-align:right">@stat.PostClickConv</td>
+    <td style="text-align:right">@stat.PostClickRev</td>
     <td style="text-align:right">@stat.PostViewConv</td>
-    <td style="text-align:right">@stat.TotalConv</td>
+    <td style="text-align:right">@stat.PostViewRev</td>
+@*    <td style="text-align:right">@stat.TotalConv</td>*@
     <td style="text-align:right">@stat.Cost</td>
 </tr>
 }
@@ -64,8 +68,10 @@
     <th style="text-align:center">@tot.CPC</th>
     <th style="text-align:center">@tot.CPA</th>
     <th style="text-align:right">@tot.PostClickConv</th>
+    <th style="text-align:right">@tot.PostClickRev</th>
     <th style="text-align:right">@tot.PostViewConv</th>
-    <th style="text-align:right">@tot.TotalConv</th>
+    <th style="text-align:right">@tot.PostViewRev</th>
+@*    <th style="text-align:right">@tot.TotalConv</th>*@
     <th style="text-align:right">@tot.Cost</th>
 </tr>
 }
