--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DirectAgents.Domain.Entities.AB.ABClient
 
-<h2>Client Details</h2>
+<h2>Client Info</h2>
 
 Id: @Model.Id<br />
 Name: @Model.Name<br />
@@ -20,4 +20,5 @@ IntCredit: @Model.IntCredit<br />
 <br /><br />
 
 Links:<br />
-@Html.ActionLink("List Clients", "Index")
+@Html.ActionLink("Summary View", "Client", "Dashboard", new { id = Model.Id }, null)<br />
+@Html.ActionLink("List All Clients", "Index")
