--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
@@ -25,14 +25,14 @@ Client:
 
 <table>
     <tr>
-        <th>Budget</th>
+        <th>Date</th>
         <th>Received</th>
     </tr>
 @foreach (var payment in Model.ABClient.ClientPayments.OrderBy(x => x.Date))
 {
     <tr>
         <td>@payment.Date.ToShortDateString()</td>
-        <td style="text-align:right">@payment.Value</td>
+        <td style="text-align:right">@payment.TotalValue()</td>
     </tr>
 }
 </table>
