--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Dashboard/Client.cshtml
@@ -48,13 +48,17 @@ Client:
 <table>
     <tr>
         <th>Date</th>
-        <th>Received</th>
+        <th>TotalReceived</th>
+        <th>Non-Job value</th>
+        <th>Job value</th>
     </tr>
 @foreach (var payment in Model.ABClient.ClientPayments.OrderBy(x => x.Date))
 {
     <tr>
         <td>@payment.Date.ToShortDateString()</td>
         <td style="text-align:right">@payment.TotalValue()</td>
+        <td style="text-align:right">@payment.NonJobValue()</td>
+        <td style="text-align:right">@payment.JobValue()</td>
     </tr>
 }
 </table>
