--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Index.cshtml
@@ -24,5 +24,9 @@ Client: @Model.Name
     </tr>
 }
 </table>
-<br />
 [@Html.ActionLink("new payment", "New", new { clientId = Model.Id })]
+
+<br /><br />
+Links:<br />
+@Html.ActionLink("View/Edit Client", "Show", "Clients", new { id = Model.Id }, null)<br />
+@Html.ActionLink("Single Client Detail", "Client", "Dashboard", new { id = Model.Id }, null)
