--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Index.cshtml
@@ -8,7 +8,7 @@
     <tr>
         <td>@client.Id</td>
         <td>@client.Name</td>
-        <td>@Html.ActionLink("details", "Show", new { id = client.Id })</td>
+        <td>@Html.ActionLink("view/edit", "Show", new { id = client.Id })</td>
     </tr>
 }
 </table>
