--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientPayments/Edit.cshtml
@@ -67,7 +67,8 @@
 
 <br />
 Links:<br />
-@Html.ActionLink("List of Payments", "Index", new { clientId = Model.ClientId })
+@Html.ActionLink("List of Payments", "Index", new { clientId = Model.ClientId })<br />
+@Html.ActionLink("View/Edit Client", "Show", "Clients", new { id = Model.ClientId }, null)
 
 <script>
     function SavePayment() {
