--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Edit.cshtml
@@ -14,12 +14,8 @@
                     <td>@Html.DisplayFor(m => m.Client.Name)</td>
                 </tr>
                 <tr>
-                    <td>@Html.LabelFor(m => m.ExtCredit)</td>
-                    <td>@Html.EditorFor(m => m.ExtCredit)</td>
-                </tr>
-                <tr>
-                    <td>@Html.LabelFor(m => m.IntCredit)</td>
-                    <td>@Html.EditorFor(m => m.IntCredit)</td>
+                    <td>@Html.LabelFor(m => m.Name)</td>
+                    <td>@Html.EditorFor(m => m.Name)</td>
                 </tr>
             </table>
             <br />
