--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Jobs/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Jobs/Index.cshtml
@@ -32,7 +32,7 @@ Client: @Model.Name
 
 <br /><br />
 Links:<br />
-@Html.ActionLink("View/Edit Client", "Show", "Clients", new { id = Model.Id }, null)<br />
+@Html.ActionLink("View/Edit ClientX", "ShowX", "Clients", new { id = Model.Id }, null)<br />
 @Html.ActionLink("Single Client Detail", "Client", "Dashboard", new { id = Model.Id }, null)
 
 @section scripts {
