--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ProtoCampaigns/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ProtoCampaigns/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DirectAgents.Domain.Entities.AB.ProtoCampaign
 
 <fieldset>
-    <legend>Edit Campaign</legend>
+    <legend>Edit ProtoCampaign</legend>
     @using (Html.BeginForm())
     {
         @Html.ValidationSummary()
