--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Index.cshtml
@@ -6,7 +6,7 @@
 <tr>
     <th>ID</th>
     <th>Name</th>
-    <th colspan="2">Campaigns</th>
+    <th colspan="2">ProtoCampaigns</th>
 </tr>
 @foreach (var ca in Model)
 {
@@ -20,7 +20,7 @@
     }
         </td>
         <td>
-            @Html.ActionLink("list", "Index", "Campaigns", new { accountId = ca.Id }, null)
+            @Html.ActionLink("list", "Index", "ProtoCampaigns", new { accountId = ca.Id }, null)
         </td>
     </tr>
 }
