--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
@@ -9,42 +9,18 @@ IntCredit: @Model.IntCredit<br />
 [@Html.ActionLink("edit", "Edit", new { id = Model.Id })]
 <br /><br />
 
-<b>Jobs:</b>
-@Html.ActionLink("view/edit", "Index", "Jobs", new { clientId = Model.Id }, null)
+<b>Accounts:</b>
+@Html.ActionLink("view/edit", "Index", "ClientAccounts", new { clientId = Model.Id }, null)
 <table>
-@foreach (var job in Model.Jobs.OrderBy(j => j.Name))
+@foreach (var acct in Model.ClientAccounts.OrderBy(j => j.Id))
 {
     <tr>
-        <td>@job.Name</td>
+        <td>@acct.Name</td>
     </tr>
 }
 </table>
-<br />
 
-<b>Budgets:</b><br />
-@if (Model.ClientBudgets != null && Model.ClientBudgets.Any())
-{
-    var cb = Model.ClientBudgets.OrderByDescending(x => x.Date).First();
-    <text>@cb.Date.ToShortDateString() Budget: @cb.Value
-    &nbsp; &nbsp;@Html.ActionLink("testlink", "EditViaLink", "ClientBudgets", new { clientId = cb.ClientId, date = cb.Date.ToShortDateString(), value = cb.Value }, null)</text>
-} else {
-    <text>[@Html.ActionLink("new budget", "NewBudget", new { id = Model.Id })]</text>
-}
 <br /><br />
-
-<b>Payments:</b>&nbsp;
-@Html.ActionLink("view/edit", "Index", "ClientPayments", new { clientId = Model.Id }, null)
-<table>
-@foreach (var payment in Model.ClientPayments.OrderBy(x => x.Date))
-{
-    <tr>
-        <td>@payment.Date.ToShortDateString()</td>
-        <td>@payment.TotalValue()</td>
-        <td>@Html.ActionLink("testlink", "EditViaLink", "ClientPayments", new { id = payment.Id, date = payment.Date.ToShortDateString(), value = payment.TotalValue() }, null)</td>
-    </tr>
-}
-</table>
-<br />
 
 Links:<br />
 @Html.ActionLink("Single Client Detail", "Client", "Dashboard", new { id = Model.Id }, null)<br />
