Show ClientAccount / AcctPayments

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/Clients/Show.cshtml
@@ -15,7 +15,7 @@ IntCredit: @Model.IntCredit<br />
 @foreach (var acct in Model.ClientAccounts.OrderBy(j => j.Id))
 {
     <tr>
-        <td>@acct.Name</td>
+        <td>@Html.ActionLink(acct.Name, "Show", "ClientAccounts", new { id = acct.Id }, null)</td>
     </tr>
 }
 </table>
