--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Show.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/AB/Views/ClientAccounts/Show.cshtml
@@ -2,9 +2,10 @@
 
 <h2>View/Edit Client Account</h2>
 
-Client: @Model.Client.Name<br />
+Client: @Html.ActionLink(Model.Client.Name, "Show", "Clients", new { id = Model.ClientId }, null)<br />
 Account: @Model.Name (ID: @Model.Id)<br />
-<br />
+[@Html.ActionLink("edit", "Edit", new { id = Model.Id })]
+<br /><br />
 
 @Html.ActionLink("Payments", "Index", "AcctPayments", new { acctId = @Model.Id }, null)<br />
 Invoices<br />
